fix buttons on Card& horizontal scroll

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -101,3 +101,9 @@
         color: #a0a0a0;
     }
 }
+
+@media screen and (min-width: 1281px) {
+    .footer {
+        width: 99vw;
+    }
+}
